Added support for ROS services, param module
Added add_ros_srv_event() to MAVLinkBridge class
Created module mavbridge_param.py to support getting/setting params
Created new service type Param.srv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,11 @@ add_message_files(
   Status.msg
 )
 
+add_service_files(
+  FILES
+  Param.srv
+)
+
 generate_messages(
   DEPENDENCIES 
   std_msgs 
