Added param_getlist service
Refactored some functions within the param module to support.

Also refactored service types to support this and to clean up
service type interface in general.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,15 @@ add_message_files(
   FILES
   Heartbeat.msg
   LLA.msg
+  ParamPair.msg
   Status.msg
 )
 
 add_service_files(
   FILES
-  Param.srv
+  ParamGet.srv
+  ParamGetList.srv
+  ParamSet.srv
 )
 
 generate_messages(
