Added geographic message types
Inspired by the ROS geographic_msgs package, but tailored and
extended for our use case. Notably, the GeoPoint message and
all derivatives now accommodate *two* altitude fields, one in
MSL and another in relative units (as used here, meters above
the "home" point as set on the autopilot).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
   FILES
+  GeoPoint.msg
+  GeoPose.msg
+  GeoPoseWithCovariance.msg
+  Geodometry.msg
   Heartbeat.msg
   LLA.msg
   ParamPair.msg
