Added TimedAction service type
Takes a timeout parameter, and returns ok (bool) result

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_service_files(
   ParamGetList.srv
   ParamSet.srv
   SlaveSetup.srv
+  TimedAction.srv
   WPGetAll.srv
   WPGetRange.srv
   WPSetAll.srv
